--- a/public/data/main.css
+++ b/public/data/main.css
@@ -1,5 +1,8 @@
 body {
     overflow: auto;
+    background: #222222;
+    /*background: rgb(6,41,85);*/
+    /*background: radial-gradient(circle, rgba(6,41,85,1) 0%, rgba(2,0,36,1) 64%);*/
 }
 .grid .r {
     position: fixed;
@@ -52,11 +55,12 @@ body {
     display: inline-block;
     font-size: initial;
     clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
-    background: #37ff00;
+    /*background: #37ff00;*/
+    background: #22A39F;
     /*border: rebeccapurple solid 1px;*/
     transform: translate(-50%, 50%) rotateZ(90deg);
     /*margin-bottom: calc(  var(--m) - var(--s)*0.2885);*/
-    transition: all .1s;
+    transition: all .2s linear;
     text-align: center;
     vertical-align: middle;
 }
@@ -73,7 +77,7 @@ body {
     display: inline-block;
     font-size: initial;
     clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
-    background: hotpink;
+    background: #434242;
     /*border: rebeccapurple solid 1px;*/
     transform: translate(-50%, 50%) rotateZ(90deg);
     /*margin-bottom: calc(  var(--m) - var(--s)*0.2885);*/
